fix alignment bug

--- a/css/index.css
+++ b/css/index.css
@@ -14,6 +14,7 @@ body {
 
 h1 {
   text-align: center;
+  margin-bottom: 50px;
 }
 
 .book-list {
